--- a/Project/Part-03/pos-app/package.json
+++ b/Project/Part-03/pos-app/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
